--- a/BanHangOnline/Views/Cart/Index.cshtml
+++ b/BanHangOnline/Views/Cart/Index.cshtml
@@ -13,8 +13,10 @@
 			<table class="table table-condensed">
 				<thead>
 					<tr class="cart_menu">
-						<td class="image">Item</td>
-						<td class="description"></td>
+						<td class="image">Image</td>
+						<td></td>
+						<td></td>
+						<td class="description">Item</td>
 						<td class="price">Price</td>
 						<td class="quantity">Quantity</td>
 						<td class="total">Total</td>
@@ -30,7 +32,9 @@
 								<td class="cart_product">
 									<a href=""><img src="~/media/products/@item.Image" alt="" width="150px" height="150px"></a>
 								</td>
-								<td class="cart_description">
+								<td></td>
+								<td></td>
+								<td class="cart_description" width="300px">
 									<h4><a href="">@item.ProductName"</a></h4>
 								</td>
 								<td class="cart_price">
