--- a/BanHangOnline/Views/Product/Details.cshtml
+++ b/BanHangOnline/Views/Product/Details.cshtml
@@ -26,7 +26,7 @@
 					@* <label>Quantity:</label>
 					<input type="text" value="@Model.Quantity" /> *@
 					<a href=""><img src="images/product-details/share.png" class="share img-responsive" alt="" /></a>
-					<a class="btn btn-default add-to-cart" asp-action="Add" asp-controller="Cart" asp-route-Id="@Model.Id">Add to cart</a>
+					<a class="btn btn-default add-to-cart" asp-action="Add" asp-controller="Cart" asp-route-Id="@Model.Id">ADD TO CART</a>
 				</div>
 			</div>
 		</div>
