--- a/BanHangOnline/Areas/Admin/Views/Brands/Create.cshtml
+++ b/BanHangOnline/Areas/Admin/Views/Brands/Create.cshtml
@@ -7,12 +7,12 @@
     <form asp-action="Create" enctype="multipart/form-data">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <label>Tên Danh Mục</label>
+            <label>Tên Thương Hiệu</label>
             <input asp-for="Name" class="form-control" />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label>Mô Tả Danh Mục</label>
+            <label>Mô Tả Thương Hiệu</label>
             <textarea asp-for="Description" class="form-control"></textarea>
             <span asp-validation-for="Description" class="text-danger"></span>
         </div>
