--- a/BanHangOnline/Views/Shared/_Layout.cshtml
+++ b/BanHangOnline/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 				<div class="row">
 					<div class="col-sm-4">
 						<div class="logo pull-left">
-							<img src="~/images/kcgld4ey.png" width="100px" height="100px"/>
+							<img src="~/images/logo.png" width="200px" height="100px"/>
 						</div>
 					</div>
 					<div class="col-sm-8">
@@ -105,18 +105,18 @@
 							<div class="carousel-inner">
 								<div class="item active">
 									<div class="col-sm-11">
-										<img src="~/images/posterr.png" class="girl img-responsive" alt="" />
+										<img src="~/images/poster.png" class="girl img-responsive" alt="" />
 									</div>
 								</div>
 								<div class="item">
 									<div class="col-sm-11">
-										<img src="~/images/posterr.png" class="girl img-responsive" alt="" />
+										<img src="~/images/poster.png" class="girl img-responsive" alt="" />
 									</div>
 								</div>
 
 								<div class="item">
 									<div class="col-sm-11">
-										<img src="~/images/posterr.png" class="girl img-responsive" alt="" />
+										<img src="~/images/poster.png" class="girl img-responsive" alt="" />
 									</div>
 								</div>
 
